force-app/main/default/objects/Bill_Group_Batch__c/Bill_Group_Batch__c.object-meta.xml
<CustomObject>
    <description>Grouping of Bill Groups for Invoice Batch Processing</description>
    <label>Bill Group Batch</label>
    <nameField>
        <label>Bill Group Batch Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Bill Group Batches</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>