force-app/main/default/objects/Bill_Group_Batch__c/fields/Bill_Batch_Type__c.field-meta.xml
<CustomField>
    <fullName>Bill_Batch_Type__c</fullName>
    <label>Bill Batch Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Calendar</fullName>
            </value>
            <value>
                <fullName>Consumption</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>