force-app/main/default/objects/Bill_Group_Batch__c/fields/Bill_Batch_Type_Safari_ID__c.field-meta.xml
<CustomField>
    <fullName>Bill_Batch_Type_Safari_ID__c</fullName>
    <formula>CASE ( TEXT( Bill_Batch_Type__c ),
   &#39;Consumption&#39;, 1,
   &#39;Calendar&#39;, 2,
   null)</formula>
    <label>Bill Batch Type Safari ID</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>