force-app/main/default/objects/Bill_Group_Batch__c/fields/CES_Office__c.field-meta.xml
<CustomField>
    <fullName>CES_Office__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>CES Office</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Bill Group Batches</relationshipLabel>
    <relationshipName>Bill_Group_Batches_del</relationshipName>
    <type>Lookup</type>
</CustomField>