force-app/main/default/objects/Bill_Group_Batch__c/fields/Prepay_Billing_Type__c.field-meta.xml
<CustomField>
    <fullName>Prepay_Billing_Type__c</fullName>
    <label>Prepay Billing Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Prepay</fullName>
            </value>
            <value>
                <fullName>Trueup</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>