force-app/main/default/objects/Bill_Group_Batch__c/fields/Prepay_Billing_Type_ID__c.field-meta.xml
<CustomField>
    <fullName>Prepay_Billing_Type_ID__c</fullName>
    <formula>IF(ISPICKVAL(Prepay_Billing_Type__c,&#39;Prepay&#39;)
  , 2
  , IF(ISPICKVAL(Prepay_Billing_Type__c,&#39;Trueup&#39;)
      , 3
      , 1
    )
)</formula>
    <label>Prepay Billing Type ID</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>