force-app/main/default/objects/Bill_Group_Batch__c/fields/Safari_ID__c.field-meta.xml
<CustomField>
    <fullName>Safari_ID__c</fullName>
    <externalId>true</externalId>
    <label>Safari ID</label>
    <length>30</length>
    <type>Text</type>
</CustomField>