force-app/main/default/objects/Bill_Group_Batch__c/listViews/Houston_Batches.listView-meta.xml
<ListView>
    <fullName>Houston_Batches</fullName>
    <columns>NAME</columns>
    <columns>Bill_Batch_Type__c</columns>
    <columns>CES_Office__c</columns>
    <columns>Safari_ID__c</columns>
    <columns>Bill_Batch_Type_Safari_ID__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>CES_Office__c</field>
        <operation>equals</operation>
        <value>CES-Houston</value>
    </filters>
    <label>Houston Batches</label>
    <language>en_US</language>
</ListView>